Fix chat bubble alignment

--- a/src/components/ChatBubble.module.scss
+++ b/src/components/ChatBubble.module.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   // justify-content: flex-start;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 @mixin chatBubble {
@@ -50,9 +50,16 @@
   }
 }
 
-.timestamp {
+.sentTimestamp {
   margin-top: 1px;
   margin-right: 10px;
+  font-size: 0.75rem;
+  user-select: none;
+}
+
+.receivedTimestamp {
+  margin-top: 1px;
+  margin-left: 10px;
   font-size: 0.75rem;
   user-select: none;
 }
